Added dependencies into CI

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -8,6 +8,12 @@ dependencies:
     # Base depends
   - python
   - pip
+  - numpy
+  - scipy
+  - os
+  - math
+  - sys
+  - collections 
 
     # Testing
   - pytest
