--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -44,12 +44,12 @@ jobs:
         python-version: ${{ matrix.python-version }}
         environment-file: devtools/conda-envs/test_env.yaml
 
-        channels: conda-forge,defaults
+#        channels: conda-forge,defaults
 
         activate-environment: test
-        auto-update-conda: false
+#        auto-update-conda: false
         auto-activate-base: false
-        show-channel-urls: true
+#        show-channel-urls: true
 
     - name: Install package
 
